--- a/Assignment1/Feed_forward_Net(Assignment_1).ipynb
+++ b/Assignment1/Feed_forward_Net(Assignment_1).ipynb
@@ -20,7 +20,7 @@
       "version": "3.8.3"
     },
     "colab": {
-      "name": "Feed_forward_Net(Assignment 1).ipynb",
+      "name": "Feed_forward_Net(Assignment_1).ipynb",
       "provenance": [],
       "collapsed_sections": [
         "xnvi07_5L4Pk",
@@ -78,7 +78,7 @@
         "import random\n",
         "from sklearn import datasets"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "        prediction,_,_ = self.forward(x)\n",
         "        print (\"Output: \\n\" + str(prediction))\n"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "        y_enc[i][j] = 1\n",
         "    return y_enc"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
         "    X_minibatches, Y_minibatches = np.array(X_minibatches), np.array(Y_minibatches)\n",
         "    return X_minibatches, Y_minibatches"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "    X_mb, Y_mb = create_minibatches(X,Y,batch_size)\n",
         "    print(X_mb, Y_mb)\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +483,7 @@
         "        train_X, train_Y = create_minibatches(X, Y, batch_size)\n",
         "    return train_X, train_Y"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +557,7 @@
         "\n",
         "neuralnet, loss_2d = plot_2d()"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
         "\n",
         "neuralnet, loss_2e = plot_2e()"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
         "\n",
         "plot_2f(loss_2d.copy(), loss_2e.copy())"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -736,7 +736,17 @@
       "source": [
         "## Question 2(2)\n",
         "\n",
-        "### Exploding and vanishing gradients"
+        "### Vanishing gradients\n",
+        "Consider the neural network with squared-error loss and the following layers - \n",
+        "\n",
+        "linear, linear, linear, linear, sigmoid\n",
+        "\n",
+        "If the weights assigned are such that the last layer produces results close to 0 or 1, the gradient of error w.r.t. to last layer actvations will be close to zero. This will cause the gradient the vanish.\n",
+        "\n",
+        "### Exploding gradient\n",
+        "Consider the architecture described above with the exception that the last layer is Relu instead of sigmoid. If the weights are initialized to some large values, the error calculated would be large. This would result in large gradients and updating weights with such large values would abruptly decrease the weights. This would lead to unstable learning.\n",
+        "\n",
+        "A workaround to check this is to increase the learning rate in the question 2(d) above. This would indirectly lead to large updates and inconsistent learning."
       ]
     },
     {
@@ -768,7 +778,7 @@
         "    data = datasets.load_digits()\n",
         "    return data['data'], data['target']"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +802,7 @@
         "    return X, Y\n",
         "    "
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +858,7 @@
         "    \n",
         "neuralnet_3_se, loss_3_se = train_3_se(1, 10**-7)"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +912,7 @@
         "\n",
         "neuralnet_3_ce, loss_3_ce = train_3_ce(1, 10**-6)"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,7 +985,7 @@
         "\n",
         "plot_3b(loss_3_se.copy(), loss_3_ce.copy())"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1050,7 +1060,7 @@
         "\n",
         "plot_3c()"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1131,7 +1141,7 @@
         "\n",
         "plot_3d()"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1230,7 @@
         "\n",
         "plot_3e_se()"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,7 +1301,7 @@
         "\n",
         "plot_3e_ce()"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,7 +1385,7 @@
         "    return (s1, s2)\n",
         "    "
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,7 +1446,7 @@
         "\n",
         "# neuralnet, loss = train_4b_se()"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1487,7 +1497,7 @@
         "\n",
         "# neuralnet, loss = train_4b_ce()"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1541,7 +1551,7 @@
         "    \n",
         "plot_4c()"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1650,7 @@
         "    \n",
         "plot_4d()"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
