--- a/Assignment1/IE643_170050031_assignment1.ipynb
+++ b/Assignment1/IE643_170050031_assignment1.ipynb
@@ -44,12 +44,8 @@
         "wxDKS9LYL4T1",
         "1nw09z-eL4UE",
         "-rKTZk4YL4Ua",
-        "2LTc3-djL4Ue",
         "nNFxM11jL4Uf",
-        "xbO7pCwRL4Ur",
-        "m16DsRWHL4VS",
-        "FABoG46LL4Vg",
-        "Yl4j2JosL4Vs"
+        "xbO7pCwRL4Ur"
       ]
     }
   },
@@ -1602,6 +1598,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fJCKAgQ9Xzyo"
+      },
+      "source": [
+        "A suitable learning rate would be one for which the error declines smoothly for both the training and test data. Looking at the plots above, this happened for a learning rate of 10^(-5). "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FABoG46LL4Vg"
       },
       "source": [
@@ -1704,7 +1709,7 @@
         "id": "ZmKadPMKvim_"
       },
       "source": [
-        "For the learning rate of 10^(-5), the error on both S1 (training set) and S2 (test set) declined "
+        "A suitable learning rate would be one for which the error declines smoothly for both the training and test data. Looking at the plots above, this happened for a learning rate of 10^(-5). "
       ]
     },
     {
@@ -1718,15 +1723,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "LiDoDPZiL4Vx"
+        "id": "MY7V6xpNX57x"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "For question 3(c) and 4(c), the learning rates are 10^(-7) and 10^(-5) respectively.\n",
+        "\n",
+        " In case of 3(d) and 4(d), the learning rates are 10^(-6) and 10^(-5)\n",
+        "\n",
+        "The reason for this difference is the mini-batch size in the two cases. Question 3 has a batch size of 1 while question 4 uses 50. Therefore, there are 50 times less updates in question 4 as compared to question 3. This leads to question 4 having a higher learning rate than question 3.\n"
+      ]
     }
   ]
 }
